<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_HaltNC" Id="{c033f4f8-0634-4c06-a30f-6a4c2be036bc}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_HaltNC IMPLEMENTS I_Halt
VAR_INPUT
    {attribute 'no_copy'}
    AxisRef : REFERENCE TO AXIS_REF;
    fbMcHalt 		: MC_Halt;
    bExecute :BOOL;
    fDeceleration : LREAL;
    fJerk :LREAL;
    eBufferMode : MC_BufferMode := MC_BufferMode.MC_Aborting;
    bError : BOOL;
    bBusy : BOOL;
    bDone : BOOL;
    nErrorID : UDINT;
    sMessage : T_MAXSTRING;
    rtDone : R_TRIG;
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[THIS^.fbMcHalt(
    Axis := THIS^.AxisRef,
    Execute := THIS^.bExecute,
    Deceleration := THIS^.fDeceleration,
    Jerk := THIS^.fJerk,
    BufferMode := THIS^.eBufferMode,
    Done =>THIS^.bDone,
    Busy => THIS^.bBusy,
    CommandAborted => ,
    Error => THIS^.bError,
    ErrorID => THIS^.nErrorID
);

rtDone(CLK:=bDone);
IF  rtDone.Q THEN
    THIS^.bExecute := FALSE;
END_IF]]></ST>
    </Implementation>
    <Property Name="ExecHalt" Id="{b029dd2e-4ddf-4863-82b3-8648d81b0ad5}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY ExecHalt : BOOL
]]></Declaration>
      <Set Name="Set" Id="{e67d86a9-bf4d-478f-a33b-2d93cc2ff9cf}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[THIS^.bExecute :=  ExecHalt;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="FB_Init" Id="{18cebc01-b938-405d-8b68-4f57807b525a}">
      <Declaration><![CDATA[//FB_Init is always available implicitly and it is used primarily for initialization.
//The return value is not evaluated. For a specific influence, you can also declare the
//methods explicitly and provide additional code there with the standard initialization
//code. You can evaluate the return value.
METHOD FB_Init: BOOL
VAR_INPUT
    bInitRetains: BOOL; // TRUE: the retain variables are initialized (reset warm / reset cold)
    bInCopyCode: BOOL;  // TRUE: the instance will be copied to the copy code afterward (online change)
    AxisRef : REFERENCE TO AXIS_REF;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.AxisRef REF= AxisRef;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Halt" Id="{7d31f5d0-f1cb-401e-ae13-f0dc85da0693}">
      <Declaration><![CDATA[METHOD Halt
VAR_INPUT
    Execute	: BOOL;
    Deceleration	: LREAL := 0;
    Jerk	: LREAL := 0;
    BufferMode	: MC_BufferMode := .MC_BufferMode.MC_Aborting;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.bExecute :=  Execute;
THIS^.fDeceleration := Deceleration;
THIS^.fJerk := Jerk;
THIS^.eBufferMode := BufferMode;]]></ST>
      </Implementation>
    </Method>
    <Property Name="HaltActive" Id="{04d62f93-14c5-45c5-834a-45619c35235a}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY HaltActive : BOOL
]]></Declaration>
      <Get Name="Get" Id="{4a5fb9e3-eee2-4c86-aac7-88671ef9bcae}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[HaltActive := THIS^.fbMcHalt.Active;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="HaltBufferMode" Id="{7337b28e-2d64-4cf3-a38d-55c6ef1e0217}">
      <Declaration><![CDATA[PROPERTY HaltBufferMode : Tc2_MC2.MC_BufferMode
]]></Declaration>
      <Set Name="Set" Id="{4fa05682-b652-4121-b44d-4a8b2a3bc935}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[eBufferMode := HaltBufferMode;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="HaltBusy" Id="{2883f0f4-4b95-4139-8a36-d2b2f3dcc31b}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY HaltBusy : BOOL
]]></Declaration>
      <Get Name="Get" Id="{5b77bc7a-e864-4e13-ae17-e0016b7d86c8}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[HaltBusy := bBusy;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="HaltDeceleration" Id="{53e71343-314a-4971-812b-de31ec077725}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY HaltDeceleration : LREAL
]]></Declaration>
      <Set Name="Set" Id="{8aa39272-ea7c-4c8a-88cc-b19176760b77}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[THIS^.fDeceleration := HaltDeceleration;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="HaltDone" Id="{be7dfb74-7669-4f3f-93f0-cda14723d1f0}">
      <Declaration><![CDATA[PROPERTY HaltDone : BOOL
]]></Declaration>
      <Get Name="Get" Id="{0f32e8ae-880b-42bd-b635-3e016d1c20ba}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[HaltDone := bDone;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="HaltError" Id="{45d4ccdb-82f3-4b2c-ae9a-f7a118e27ac3}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY HaltError : BOOL
]]></Declaration>
      <Get Name="Get" Id="{bbf7cb10-277f-4907-9b37-03e01cec3c96}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[HaltError := bError;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="HaltErrorID" Id="{336845aa-0c0a-4c8a-b21e-bc9fafd47d20}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY HaltErrorID : UDINT
]]></Declaration>
      <Get Name="Get" Id="{d0994f69-d16e-4cfd-8b2d-204ea0c00d54}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[HaltErrorID := nErrorID;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="HaltJerk" Id="{ccf57f45-64a9-413b-b5e8-74695a1b4351}">
      <Declaration><![CDATA[PROPERTY HaltJerk : LREAL
]]></Declaration>
      <Set Name="Set" Id="{5532a8e1-15d6-4ddf-bcad-8d399efcf14b}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[fJerk := HaltJerk;]]></ST>
        </Implementation>
      </Set>
    </Property>
  </POU>
</TcPlcObject>